frontend/tests/cases/positive/interfaces/simple/interface-simple-18.gr
data A a = A'

data B b = B'

interface Simple a where
  simple : a -> a

-- well-kinded nested datatype
instance Simple (A (B b)) where
  simple x = x
